--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -33,5 +33,8 @@ jobs:
           # The root LaTeX file to be compiled
           root_file: embeddedlinux.tex
           # The working directory for the latex compiler to be invoked
-   
-          
+      - uses: actions/upload-artifact@v4
+        with:
+          name: UPM-RPI-embeddedLinux.pdf
+          path: embeddedlinux.pdf
+              
