--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -42,12 +42,12 @@ jobs:
         id: create_release 
         uses: actions/create-release@v1 
         with: 
-             tag_name: ${{ github.ref }} 
-             release_name: Release ${{ github.ref }} 
+             tag_name: 1.0 
+             release_name: Release 1.0 
              draft: false 
              prerelease: false 
              body: | 
-                Release notes for ${{ github.ref }}
+                Release notes for 1.0
         env: 
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
            
