--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           # The root LaTeX file to be compiled
           root_file: embeddedlinux.tex
+          args: -f
           # The working directory for the latex compiler to be invoked
       - uses: actions/upload-artifact@v4
         with:
