--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -38,6 +38,9 @@ jobs:
         with:
           name: UPM-RPI-embeddedLinux.pdf
           path: embeddedlinux.pdf
+        with:
+          name: UPM-RPI-embeddedLinux.log
+          path: embeddedlinux.log  
           
       - name: Create Release 
         id: create_release 
