--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           name: UPM-RPI-embeddedLinux.pdf
           path: embeddedlinux.pdf
+      - uses: actions/upload-artifact@v4 
         with:
           name: UPM-RPI-embeddedLinux.log
           path: embeddedlinux.log  
