--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -24,7 +24,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-      
+
+      - name: Install Pygments
+        run: pip install Pygments
+        
       - name: LaTeX compilation
         # You may pin to the exact commit or the version.
         # uses: dante-ev/latex-action@49cf7cb5f79e7b2006dbdffea85e02bec0b6244b
