--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -57,6 +57,7 @@ jobs:
              release_name: Release 1.0 
              draft: false 
              prerelease: false 
+             overwrite: true
              body: | 
                 Release notes for 1.0
         env: 
