--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -49,6 +49,10 @@ jobs:
           name: UPM-RPI-embeddedLinux.log
           path: embeddedlinux.log  
           
+      - name: Delete Release
+        run:
+           gh release delete 1.0 -y
+           
       - name: Create Release 
         id: create_release 
         uses: actions/create-release@v1 
@@ -57,7 +61,6 @@ jobs:
              release_name: Release 1.0 
              draft: false 
              prerelease: false 
-             overwrite: true
              body: | 
                 Release notes for 1.0
         env: 
