--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -51,7 +51,7 @@ jobs:
           
       - name: Delete Release
         run:
-           gh release delete 1.0 -y
+           gh release delete Release 1.0 -y
         env: 
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
            
