--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -51,7 +51,7 @@ jobs:
           
       - name: Delete Release
         run:
-           gh release delete Release 1.0 -y
+           gh release delete 1.0 -y
         env: 
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
            
@@ -60,7 +60,7 @@ jobs:
         uses: actions/create-release@v1 
         with: 
              tag_name: 1.0 
-             release_name: Release 1.0 
+             release_name: 1.0 
              draft: false 
              prerelease: false 
              body: | 
