--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -51,7 +51,8 @@ jobs:
           
       - name: Delete Release
         run:
-           gh release delete 1.0 -y
+           #gh release delete 1.0 -y
+           gh api -X DELETE repos/${{ github.repository }}/git/refs/tags/1.0
         env: 
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
            
