--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -51,8 +51,8 @@ jobs:
           
       - name: Delete Release
         run:
-           #gh release delete 1.0 -y
-           gh api -X DELETE repos/${{ github.repository }}/git/refs/tags/1
+           gh release delete 1.0 -y
+           gh api -X DELETE repos/${{ github.repository }}/git/refs/tags/1.0
         env: 
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
            
@@ -61,11 +61,11 @@ jobs:
         uses: actions/create-release@v1 
         with: 
              tag_name: 1.0 
-             release_name: 1.0 
+             release_name: 1.0
              draft: false 
              prerelease: false 
              body: | 
-                Release notes for 1.0
+                Release notes for 1.0: This pesentation always contains the last version of the slides
         env: 
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
            
