--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -51,8 +51,8 @@ jobs:
           
       - name: Delete Release
         run:
-           gh release delete 1.0 -y
-           gh api -X DELETE repos/${{ github.repository }}/git/refs/tags/1.0
+           gh release delete 1.0 --cleanup-tag --yes
+          
         env: 
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
            
